<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/constraintContainerFragmentRegisterCompany"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardEtContent"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/multiplier_5X_dp"
        android:elevation="@dimen/multiplier_10X_dp"
        app:cardCornerRadius="@dimen/multiplier_9X_dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <EditText
                android:id="@+id/etNit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/multiplier_5X_dp"
                android:layout_marginTop="@dimen/multiplier_8X_dp"
                android:layout_marginRight="@dimen/multiplier_5X_dp"
                android:ems="10"
                android:hint="@string/nit"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/etNameCompany"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/multiplier_5X_dp"
                android:layout_marginTop="@dimen/multiplier_4X_dp"
                android:layout_marginRight="@dimen/multiplier_5X_dp"
                android:ems="10"
                android:hint="@string/nameCompany"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etNit" />

            <Button
                android:id="@+id/btnRegisterConfirmation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/confirmRegister"
                android:background="@drawable/radius_card_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <include
                layout="@layout/progress_layout"
                app:layout_constraintBottom_toBottomOf="@+id/btnRegisterConfirmation"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>>


    </androidx.cardview.widget.CardView>



</androidx.constraintlayout.widget.ConstraintLayout>