<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:cardCornerRadius="@dimen/multiplier_5X_dp"
        android:elevation="@dimen/multiplier_5X_dp"
        android:layout_margin="@dimen/multiplier_5X_dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/multiplier_10X_dp">


            <EditText
                android:id="@+id/etSurveyName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/multiplier_7X_dp"
                android:layout_marginTop="@dimen/multiplier_5X_dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/surveyName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Switch
                android:id="@+id/switchEnable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/multiplier_5X_dp"
                android:layout_marginRight="@dimen/multiplier_7X_dp"
                android:text="@string/enable"
                app:layout_constraintBottom_toBottomOf="@+id/etSurveyName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/etSurveyDescription"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_margin="@dimen/multiplier_7X_dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/description"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etSurveyName" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvQuestionsCreateSurvey"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/multiplier_5X_dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline4" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAddQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/multiplier_8X_dp"
        android:layout_marginRight="@dimen/multiplier_8X_dp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_input_add" />
</androidx.constraintlayout.widget.ConstraintLayout>